--- a/mainapp/templates/mainapp/includes/inc_prod_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_prod_menu.html
@@ -1,7 +1,7 @@
 <div class="links clearfix">
     <ul class="links-menu">
         {% for link in prod_menu_links %}
-            <li><a href="{{link.href}}"
+            <li><a href="{% url 'products:index' %}{{link.id}}"
                 class="{% if request.resolver_match.url_name == link.href %}active{% endif %}">
                 {{link.name}}
                 </a>
