--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -64,16 +64,15 @@
 				<div class="related-products clearfix">
 					{% for product in related_products %}
 					<div class="block">
-						<a href="#"><img src="{% static product.product_img %}" alt="">
+						<a href="#"><img src="/media/{{product.image}}" width=370px height=370px alt="">
 							<div class="text">
 								<img src="{% static 'img/icon-hover.png' %}" alt="img">
 								<h4>{{product.name}}</h4>
-								<p>{{product.description}}. </p>
+								<p>{{product.short_dec}}.</p>
 							</div>
 						</a>
 					</div>
 					{% endfor %}
-					
 				</div>
 			</div>
 		</div>
