--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
 	<meta charset="utf-8">
 	<title>{% block title %}
@@ -15,7 +15,7 @@
 	<div class="container">
         {% block content %}
 		{% endblock %}
-
+    </div>
 
 
     <div class="footer">
