--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -7,5 +7,24 @@
             </a>
         </li> 
         {% endfor %}
+    {% if user.is_authenticated %}
+<li>
+    <a href="{% url 'auth:edit' %}">
+        {{ user.first_name|default:'Пользователь' }}
+    </a>
+</li>
+{% endif %}
+<li>
+    {% if user.is_authenticated %}
+      <a href="{% url 'auth:logout' %}">выйти</a>
+    {% else %}
+      <a href="{% url 'auth:login' %}">войти</a>
+    {% endif %}
+</li>
+<li>
+    <a href="">Корзина</a>
+</li>
 </ul>
+
+
 <a href="#" class="search"></a>
