--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -8,8 +8,6 @@
     </div>
   </div>
 
-
-
   <div class="details">
     <div class="links clearfix">
       {% include 'mainapp/includes/inc_prod_menu.html' %}
@@ -23,10 +21,10 @@
       </div>
       <div class="category-products clearfix">
 
-        {% for product in products %}
+        {% for product in all_products %}
           <div class="block">
             <a href="#">
-              <img src="/media/{{ product.image }}" alt="product">
+                <img src="/media/{{ product.image }}" width=200px height=200px alt="">
               <div class="text">
                 <img src="{% static 'img/icon-hover.png' %}" alt="hover">
                   <h4>{{ product.name }}</h4>
