готово ДЗ 5 урока

--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -22,11 +22,13 @@
     {% endif %}
 </li>
 
-<li>
-    <a href="">Корзина</a>
-</li>
 </ul>
-
 
 <a href="#" class="search"></a>
 
+<a href="{% url 'basket:view' %}" class="basket">
+    <span>
+        {% if basket %} {{ basket|length }} {% endif %}
+    </span>
+
+</a>
