--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -23,7 +23,7 @@
 
         {% for product in all_products %}
           <div class="block">
-            <a href="#">
+            <a href="{% url 'basket:add' product.pk %}">
                 <img src="/media/{{ product.image }}" width=200px height=200px alt="">
               <div class="text">
                 <img src="{% static 'img/icon-hover.png' %}" alt="hover">
