--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -21,14 +21,15 @@
       <a href="{% url 'auth:login' %}">войти</a>
     {% endif %}
 </li>
-
+<li>
+   <a href="#" class="search"></a>
+</li>
+<li>
+    <a href="{% url 'basket:view' %}" class="basket"></a>
+</li>
+<li class="li_basket_count">
+   ({{ basket|length }})
+</li>
 </ul>
 
-<a href="#" class="search"></a>
 
-<a href="{% url 'basket:view' %}" class="basket">
-    <span>
-        {% if basket %} {{ basket|length }} {% endif %}
-    </span>
-
-</a>
