--- a/static/style.css
+++ b/static/style.css
@@ -76,18 +76,32 @@ html, body {
 	width: 23px;
 	height: 23px;	
 	background-image: url(img/search.png);
-	position: absolute;
+	background-repeat: no-repeat;
+	/*position: absolute;*/
+	margin-left: 30px;
 	top: 63px;
 	left: 1176px;
 }
-.basket {
+.menu .basket {
 	display: block;
 	width: 23px;
 	height: 23px;
 	background-image: url(img/basket.png);
-	position: absolute;
+	background-repeat: no-repeat;
+	margin-left: 10px;
+	padding-right: 0;
+	/*position: absolute;*/
 	top: 63px;
 	left: 1230px;
+}
+.li_basket_count {
+	padding-left: 1px;
+	color: #8c8c8c;
+	font-size: 14px;
+	font-weight: 700;
+	text-align: right;
+	text-transform: uppercase;
+	text-decoration: none;
 }
 
 .clearfix:after {
