Добавлен функционал удаление из корзины. Отдельная страница товара

--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -28,7 +28,10 @@
     <a href="{% url 'basket:view' %}" class="basket"></a>
 </li>
 <li class="li_basket_count">
-   {{ basket|length }} - ({{ total_cost }} руб.)
+   {% if basket %}
+      {{ basket.0.total_cost|floatformat:0 }} руб
+      ({{ basket.0.total_quantity }} шт)
+    {% endif %}
 </li>
 </ul>
 
