--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -16,42 +16,21 @@
         <div class="details-products">
             <div class="details-slider">
                 <div class="slider-product">
-                    <img src="{% static 'img/slider1.jpg' %}">
-                </div>
-                <div class="slider-control">
-                    <div class="block">
-                        <a href="#"><img src="{% static 'img/controll.jpg' %}" alt="">
-                            <div class="text"></div>
-                        </a>
-                    </div>
-                    <div class="block">
-                        <a href="#"><img src="{% static 'img/controll1.jpg' %}" alt="">
-                            <div class="text"></div>
-                        </a>
-                    </div>
-                    <div class="block">
-                        <a href="#"><img src="{% static 'img/controll2.jpg' %}" alt="">
-                            <div class="text"></div>
-                        </a>
-                    </div>
+                    <img src="/media/{{ hot_product.image }}" width=600px height=600px alt="">
                 </div>
             </div>
 
 <
             <div class="description">
-                <h3 class="big-bold">Отличный стул</h3>
+                <h3 class="big-bold">{{ hot_product.name }}</h3>
                 <h3 class="red">горячее предложение</h3>
-                <p class="price"> 2585.9 <span>руб</span></p>
+                <p class="price"> {{ hot_product.price }} <span>руб</span></p>
                 <a href="#" class="red-button">
                     заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
                 </a>
                 <div class="description-text">
-                    <p>Расположитесь комфортно.</p>
-                    <p>Отличное качество материалов
-                    позволит вам это.</p>
-                    <p>Различные цвета</p>
-                    <p>высочайший уровень
-                    эргономики и прочность.</p>
+                    <p>{{ hot_product.short_dec }}.</p>
+                    <p>{{ hot_product.description }}</p>
                 </div>
             </div>
         </div>
@@ -62,7 +41,7 @@
                 <a class="explore" href="#">показать все <img src="{% static 'img/arrow.png' %}" alt=""></a>
             </div>
             <div class="related-products clearfix">
-                {% for product in related_products %}
+                {% for product in same_product %}
                 <div class="block">
                     <a href="#"><img src="/media/{{product.image}}" width=370px height=370px alt="">
                         <div class="text">
