--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -17,7 +17,7 @@
 
 {% if user.is_superuser %}
     <li>
-        <a href="{% url 'admin:user' %}">
+        <a href="{% url 'admin:users' %}">
             админка
         </a>
     </li>
