--- a/adminapp/templates/adminapp/categories.html
+++ b/adminapp/templates/adminapp/categories.html
@@ -12,7 +12,7 @@
     {% for object in objects %}
       <div class="category_record {% if not object.is_active %}not active{% endif %}">
          <div class="category_name">
-          {{ object.name|title }}
+          {{ object.name|title }} ({% if object.is_active == True %}Категоря активна{% else %}Категория не активна{% endif %})
         </div>
         <div class="category_actions">
           <button>
