--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -9,19 +9,33 @@
   </div>
 
   <div class="details">
-
+    <div class="links clearfix">
       {% include 'mainapp/includes/inc_prod_menu.html' %}
-
+    </div>
 
     <div class="products_list">
+    <div class="paginator">
+              {% if products.has_previous %}
+                  <a href="{% url 'products:page' category.pk products.previous_page_number %}">
+                      <
+                  </a>
+              {% endif %}
+            <span class="current">
+                страница {{ products.number }} из {{ products.paginator.num_pages }}
+            </span>
+            {% if products.has_next %}
+              <a href="{% url 'products:page' category.pk products.next_page_number %}">
+                  >
+              </a>
+            {% endif %}
+          </div>
       <div class="title clearfix">
-        <h2>
-          Категория: "{{ category.name|title }}"
-        </h2>
+        <h2>Категория: "{{ category.name|title }}"</h2>
+
       </div>
       <div class="category-products clearfix">
 
-        {% for product in all_products %}
+        {% for product in products %}
           <div class="block">
             <a href="{% url 'products:product' product.pk %}">
                 <img src="/media/{{ product.image }}" width=200px height=200px alt="">
