--- a/adminapp/templates/adminapp/products.html
+++ b/adminapp/templates/adminapp/products.html
@@ -4,16 +4,16 @@
 {% block content %}
   <div class="products_list">
     <button class="new_product">
-      <a href={% url 'admin:product_create' category.pk %}>
+      <a href={% url 'admin:product_create' category %}>
         новый продукт
       </a>
     </button>
 		
-    {% for object in objects %}
+    {% for object in object_list %}
       <div class="product_record">
         <img 
           src="/media/{{object.image|default:'products_images/default.jpg'}}"
-          alt="{{ object.name }}">
+          alt="{{ object.name }}" width=400px height=400px>
         <div class="product_name">
           {{ object.name|title }}
         </div>
