--- a/adminapp/templates/adminapp/category_delete.html
+++ b/adminapp/templates/adminapp/category_delete.html
@@ -4,8 +4,8 @@
 
 {% block content %}
   <div class="user_delete">
-    Уверены, что хотите удалить категорию "{{ category_to_delete.name }}"?
-    <form action="{% url 'admin:category_delete' category_to_delete.pk %}"
+    Уверены, что хотите удалить категорию "{{ object.name }}"?
+    <form action="{% url 'admin:category_delete' object.pk %}"
           method="post">
       {% csrf_token %}
       <input class="btn btn-danger" type="submit" value="удалить">
