--- a/mainapp/templates/mainapp/includes/inc_prod_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_prod_menu.html
@@ -1,4 +1,4 @@
-
+<div class="links clearfix">
     <ul class="links-menu">
         <li>
             <a href="{% url 'products:category' 0 %}"
@@ -17,3 +17,4 @@
             </li>
         {% endfor %}
     </ul>
+</div>
