--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -3,13 +3,20 @@
 <html lang="">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}
-            {% endblock %}
+	<title>
+        {% block title %}
+            {{ title | capfirst }}
+        {% endblock %}
     </title>
     {% block css %}
-	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-	<link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
     {% endblock %}
+    {% block js %}
+       <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+       <script src="{% static 'js/bootstrap.min.js' %}"></script>
+   {% endblock %}
 </head>
 <body>
 	<div class="container">
