--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -15,7 +15,7 @@
     {% endblock %}
     {% block js %}
        <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-       <script src="{% static 'js/bootstrap.min.js' %}"></script>
+       <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
    {% endblock %}
 </head>
 <body>
