--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -2436,7 +2436,7 @@ fieldset:disabled a.btn {
 
 .btn-info {
   color: #fff;
-  background-color: #17a2b8;
+  background-color: #94c77f;
   border-color: #17a2b8;
 }
 
