--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -21,7 +21,7 @@
                    </a>
                </li>
                <li>
-                   <a href="#">
+                   <a href="{% url 'ordersapp:orders_list' %}">
                        заказы
                    </a>
                </li>
