first part done

--- a/adminapp/templates/adminapp/users.html
+++ b/adminapp/templates/adminapp/users.html
@@ -40,7 +40,7 @@
                   <p>{{ object.last_name|title }}</p>
                 {% endif %}
             {% endif %}
-        </p>
+
         </div>
         <div class="user_age">
           age:<br>
@@ -54,7 +54,7 @@
           logged:<br>
           {{ object.last_login }}
         </div>
-      </div>
+{#      </div>#}
     {% endfor%}
-  </div>
+    </div>
 {% endblock %}
