--- a/adminapp/templates/adminapp/base.html
+++ b/adminapp/templates/adminapp/base.html
@@ -3,12 +3,15 @@
 <html lang="">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}
-            {% endblock %}
+	<title>
+        {% block title %}
+        {% endblock %}
     </title>
     {% block css %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 	<link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
+
     {% endblock %}
 <body>
     <div class="admin_container">
