--- a/ordersapp/templates/ordersapp/base.html
+++ b/ordersapp/templates/ordersapp/base.html
@@ -15,7 +15,8 @@
    {% endblock %}
    {% block js %}
        <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-       <script src="{% static 'js/orders_scripts.js' %}"></script>
+       <script src="{% static 'js/jquery.formset.js' %}"></script>
+       <script src="{% static 'js/orders_script_1.js' %}"></script>
    {% endblock %}
 </head>
 <body>
