--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -16,6 +16,7 @@
     {% block js %}
        <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+       <script src="{% static 'js/main_scripts.js' %}"></script>
    {% endblock %}
 </head>
 <body>
