--- a/authapp/templates/authapp/base.html
+++ b/authapp/templates/authapp/base.html
@@ -11,7 +11,7 @@
         {% endblock %}
     </title>
     {% block css %}
-        <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 {#        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">#}
     {% endblock %}
