--- a/basketapp/templates/basketapp/include/inc_basket_list.html
+++ b/basketapp/templates/basketapp/include/inc_basket_list.html
@@ -1,7 +1,7 @@
 {% for item in basket_items %}
     <div class="basket_record">
         <img src="/media/{{ item.product.image }}"
-             alt="{{ item.product.short_desc }}">
+             alt="{{ item.product.short_desc }}" width="250" height="250">
         <span class="category_name">{{ item.product.category.name }}</span>
         <span class="product_name">{{ item.product.name }}</span>
         <span class="product_price">{{ item.product.price }}&nbspруб</span>
