--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -1,6 +1,6 @@
 {% extends 'mainapp/base.html'%}
 {% load static %}
-{% block title %}Магазин{% endblock%}
+{% block title %}{{ title|title }}{% endblock%}
     {% block content %}
     <div class="slider">
 
