--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -4,11 +4,11 @@
 
 {% block title %}Каталог{% endblock %}
 {% block content %}
-    <div class="hero-white">
-        <div class="header clearfix">
+
+        <div class="header">
             {% include 'mainapp/includes/inc_main_menu.html' %}
         </div>
-    </div>
+
 
     <div class="details">
 
