--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -9,34 +9,36 @@
     </div>
   </div>
 
-  <div class="details">
+{#  <div class="details">#}
 
       {% include 'mainapp/includes/inc_prod_menu.html' %}
-
-    <div class="products_list">
-    <div class="paginator">
-              {% if products.has_previous %}
-                  <a href="{% url 'products:page' category.pk products.previous_page_number %}">
-                      <
-                  </a>
-              {% endif %}
-            <span class="current">
-                страница {{ products.number }} из {{ products.paginator.num_pages }}
-            </span>
-            {% if products.has_next %}
-              <a href="{% url 'products:page' category.pk products.next_page_number %}">
-                  >
-              </a>
-            {% endif %}
-          </div>
       <div class="title clearfix">
         <h2>Категория: "{{ category.name|title }}"</h2>
-
       </div>
-      <div class="category-products clearfix">
+
+      {% if products.has_other_pages %}
+            <div class="paginator">
+                {% if products.has_previous %}
+                      <a href="{% url 'products:page' category.pk products.previous_page_number %}">
+                          <
+                      </a>
+                {% endif %}
+                <span class="current">
+                    страница {{ products.number }} из {{ products.paginator.num_pages }}
+                </span>
+                {% if products.has_next %}
+                    <a href="{% url 'products:page' category.pk products.next_page_number %}">
+                          >
+                    </a>
+                {% endif %}
+            </div>
+      {% endif %}
+    <div class="products_list">
+
+{#      <div class="category-products clearfix">#}
 
         {% for product in products %}
-          <div class="block">
+          <div class="product_record">
             <a href="{% url 'products:product' product.pk %}">
                 <img src="{{ product.image|media_folder_products }}" width=200px height=200px alt="">
               <div class="text">
@@ -48,9 +50,26 @@
           </div>
         {% endfor %}
 
-      </div>
+{#      </div>#}
     </div>
-  </div>
+        {% if products.has_other_pages %}
+        <div class="paginator">
+            {% if products.has_previous %}
+                  <a href="{% url 'products:page' category.pk products.previous_page_number %}">
+                      <
+                  </a>
+            {% endif %}
+            <span class="current">
+                страница {{ products.number }} из {{ products.paginator.num_pages }}
+            </span>
+            {% if products.has_next %}
+                <a href="{% url 'products:page' category.pk products.next_page_number %}">
+                      >
+                </a>
+            {% endif %}
+        </div>
+        {% endif %}
+{#  </div>#}
 
   <div class="clr"></div>
 
