--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -4,9 +4,8 @@
     {% block content %}
     <div class="slider">
 
-        <div class="header clearfix">
+        <div class="header">
             {% include 'mainapp/includes/inc_main_menu.html' %}
-
         </div>
         <div class="text-slider">
             <h3 class="green">тенденции</h3>
